# pipreqs-update.py

./: README.md  requirements.txt  setup.cfg  setup.py
pipreqs_update/: __init__.py  __main__.py
scripts/: pipreqs-update
