# https://pypi.org/project/setupcfg-generator/
[metadata]
name = pipreqs_update
version = 2019.4.13
url = https://github.com/looking-for-a-job/pipreqs_update.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = requirements

[options]
install_requires = 
	Requests
	click
	public
	setuptools
scripts = 
	scripts/pipreqs-update
packages = 
	pipreqs_update
